apps/wazuh/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-dashboard
  namespace: wazuh
spec:
  type: ClusterIP
  selector:
    app: wazuh-dashboard
  ports:
    - name: http
      port: 5601
      targetPort: 5601
