apps/wazuh/service-indexer.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-indexer
  namespace: wazuh
spec:
  type: ClusterIP
  selector:
    app: wazuh-indexer
  ports:
    - name: https
      port: 9200
      targetPort: 9200
